# very-serious-gopher

./: README.md
very-serious-gopher-server/: .gitignore  default.nix  motd.txt  shell.nix  stack.yaml  very-serious-gopher-server.cabal  very-serious-gopher-server.nix
very-serious-gopher-server/data/: index3.post
very-serious-gopher-server/src/: Main.hs
very-serious-gopher-server/src/Network/: Gopher.hs
