name:                very-serious-gopher-server
version:             0.1.0.0
synopsis:            A Very Serious GOPHER Server
description:         A Very Serious GOPHER Server
homepage:            https://averyserious.website/
license:             GPL-3
license-file:        LICENSE
author:              The Real HTTPsters
maintainer:          info@averyseriouswebsite.net
copyright:           Travis Whitaker 2018
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  exposed-modules:     Network.Gopher
  -- other-modules:
  build-depends:       base >=4.11 && <4.12
                     , bytestring
                     , network
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
                       -Wall
                       -Werror
                       -Wno-unused-do-bind

executable vrysrs
  main-is:     Main.hs
  hs-source-dirs: src
  default-language:    Haskell2010
  other-modules:       Network.Gopher	
  build-depends:       base >=4.11 && <4.12
                     , bytestring
                     , network
                     , text
                     , split
  ghc-options:         -O2
                       -Wall
                       -Werror
                       -Wno-unused-do-bind
